<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="missing_play_store">Unknown error connecting to play store</string>
    <!-- Login -->
    <string name="app_name">Street Art Mapper</string>
    <string name="create_account">Create Account</string>
    <string name="skip_account">Skip Login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="account_missing_password">Please enter a password</string>
    <string name="account_mismatched_password">Your passwords do not match</string>
    <string name="account_missing_username">Please enter a username</string>
    <string name="failed_account_create">Failed to create an account</string>
    <string name="failed_login">Failed to login</string>
    <string name="creating_account">Creating account...</string>
    <string name="logging_in">Logging in...</string>
    <!-- Edit Photo -->
    <string name="title">Title</string>
    <string name="description">Description (Optional)</string>
    <string name="missing_title">Please enter a title</string>
    <string name="missing_image">Please take a picture</string>
    <string name="error_reading_file">Error reading file</string>
    <string name="error_saving_file">Error saving file to Cloud</string>
    <string name="saving_art">Saving...</string>
    <!-- Photo Viewing -->
    <string name="error_loading_art">Error loading street art</string>
    <string name="loading_art">Loading art...</string>
    <string name="no_art">No art found</string>
</resources>
