<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
        >
    <EditText
        android:id="@+id/user_name"
        style="@style/FullInputBox"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/password"
        style="@style/FullInputBox"
        android:hint="@string/password"
        android:password="true"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/login"
            style="@style/DefaultButton"
            android:text="@string/login"
            />
        <Button
                android:id="@+id/create"
                style="@style/DefaultButton"
                android:text="@string/create_account"
                />
    </LinearLayout>
    <Button
        style="@style/DefaultButton"
        android:layout_width="@dimen/input_box"
        android:text="@string/skip_account"
        />
</LinearLayout>