<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banner"
            android:layout_marginRight="@dimen/deep_margin"
            android:layout_marginLeft="@dimen/deep_margin"
            />
    <EditText
            android:id="@+id/txt_username"
            style="@style/FullInputBox"
            android:hint="@string/username"
            />
    <EditText
            android:id="@+id/txt_password"
            style="@style/FullInputBox"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    <EditText
            android:id="@+id/txt_confirm_password"
            style="@style/FullInputBox"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />
    <Button
        style="@style/FullPageButton"
        android:text="@string/create_account"
        android:onClick="onCreateAccount"
        />
</LinearLayout>